# starting-ragchatbot-codebase

./: CLAUDE.md  TYPE_CHECKING_BASELINE.md  frontend-changes.md  pyproject.toml
backend/: ai_generator.py  app.py  config.py  search_tools.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_config.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
scripts/: README.md  format.sh  lint.sh  quality.sh  test.sh  typecheck.sh
