[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
]

[tool.pytest.ini_options]
# Test discovery patterns
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output configuration
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Strict marker enforcement
    "--tb=short",                  # Shorter traceback format
    "--disable-warnings",          # Disable pytest warnings
    "-ra",                         # Show summary of all test outcomes
]

# Markers for test organization
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for component interactions",
    "api: API endpoint tests",
    "slow: Tests that take significant time to run",
]

# Coverage configuration (optional, for future use)
# Uncomment when pytest-cov is added to dependencies
# addopts = ["--cov=backend", "--cov-report=html", "--cov-report=term"]

# Logging configuration
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Minimum version requirement
minversion = "8.0"
